--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Panda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
-<body>
+<body class="container">
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
@@ -26,10 +29,11 @@
                         <li>
                             <div class="input-group input-group-lg">
                                 <input type="text" class="form-control form-control-lg rounde bg-transparent text-white"
-                                  placeholder="Type Keywords" aria-label="Type Keywords" aria-describedby="basic-addon2" />
+                                    placeholder="Type Keywords" aria-label="Type Keywords"
+                                    aria-describedby="basic-addon2" />
                                 <span class="input-group-text border-0" id="basic-addon2"><i
-                                    class="fas fa-search fa-lg text-white"></i></span>
-                              </div>
+                                        class="fas fa-search fa-lg text-white"></i></span>
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -48,7 +52,75 @@
             </div>
         </nav>
         <!-- Slider start -->
-        
+        <section class="bg-info mt-5">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row p-5">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>Mi LED TV 4A PRO 32</h2>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                        officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                                        nostrud
+                                        amet.</p>
+                                    <div class="btn btn-warning">Buy Now  <i class="fa-solid fa-greater-than"></i></div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block img-fluid" alt="...">
+                            </div>
+                        </div> -->
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row p-5">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>Mi LED TV 4A PRO 32</h2>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                        officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                                        nostrud
+                                        amet.</p>
+                                        <h2>$1289</h2>
+                                    <div class="btn btn-warning text-center">Buy Now  <i class="fa-solid fa-greater-than"></i></div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block img-fluid" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row p-5">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>Mi LED TV 4A PRO 32</h2>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                        officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                                        nostrud
+                                        amet.</p>
+                                        <h2>$1289</h2>
+                                    <div class="btn btn-warning">Buy Now  <i class="fa-solid fa-greater-than"></i></div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block img-fluid" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
         <!-- Slider end -->
     </header>
     <main>
